--- a/frontend/designerDashboard.html
+++ b/frontend/designerDashboard.html
@@ -9,6 +9,7 @@
       .designer-dashboard-container {
         display: flex;
         font-family: Arial, sans-serif;
+        position: relative;
       }
 
       /* Sidebar styling */
@@ -94,6 +95,69 @@
         color: #888;
       }
 
+      /* Dashboard Cards Styling */
+      .stats-container {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+      }
+
+      .card {
+        flex: 1;
+        min-width: 200px;
+        max-width: 300px;
+        background-color: #fff;
+        border-radius: 8px;
+        padding: 20px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        transition: transform 0.3s, box-shadow 0.3s;
+      }
+
+      .card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
+      }
+
+      .card h3 {
+        font-size: 20px;
+        color: #3498db;
+        margin-bottom: 10px;
+      }
+
+      .card p {
+        font-size: 24px;
+        font-weight: bold;
+        color: #333;
+      }
+      /* .stats-container {
+        display: flex;
+        gap: 20px;
+        margin-top: 20px;
+      }
+      .card {
+        background-color: #f5f5f5;
+        padding: 20px;
+        border-radius: 10px;
+        text-align: center;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      }
+      .card h3 {
+        margin-bottom: 10px;
+        font-size: 18px;
+      }
+      .card p {
+        font-size: 24px;
+        color: #333;
+        font-weight: bold;
+      } */
+
+      .conditional-field {
+        display: none;
+      }
+
       /* Modal styling */
       #templateModal {
         display: none;
@@ -105,6 +169,9 @@
         background: rgba(0, 0, 0, 0.5);
         justify-content: center;
         align-items: center;
+      }
+      img#largeImage {
+        width: 52% !important;
       }
 
       .modal-content {
@@ -156,6 +223,27 @@
 
       <!-- Main content area -->
       <div class="content">
+        <!-- Notifications Button -->
+        <div id="notifications" style="position: absolute; right: 0">
+          <button onclick="toggleNotifications()">🔔 Notifications</button>
+          <span id="notificationBadge" style="color: red; display: none"
+            >●</span
+          >
+        </div>
+
+        <!-- Notifications Dropdown -->
+        <div
+          id="notificationDropdown"
+          style="
+            display: none;
+            position: absolute;
+            background: #fff;
+            border: 1px solid #ddd;
+            padding: 10px;
+          "
+        >
+          <ul id="notificationList"></ul>
+        </div>
         <!-- Welcome Section -->
         <div id="welcome-section" class="section active">
           <h2 id="designerName">Welcome, Designer!</h2>
@@ -163,6 +251,44 @@
             Manage your templates, track sales, and update your payment
             information.
           </p>
+
+          <!-- Dashboard Cards -->
+          <div class="stats-container">
+            <div class="card">
+              <h3>Total Sales</h3>
+              <p id="totalSales">0</p>
+            </div>
+            <div class="card">
+              <h3>Approved Templates</h3>
+              <p id="totalApproved">0</p>
+            </div>
+            <div class="card">
+              <h3>Pending Templates</h3>
+              <p id="totalPending">0</p>
+            </div>
+            <div class="card">
+              <h3>Total Earnings</h3>
+              <p id="totalEarnings">$0.00</p>
+            </div>
+          </div>
+          <!-- <div class="dashboard-cards" id="dashboardCards">
+            <div class="card">
+              <h3>Total Sales</h3>
+              <p id="totalSales">$0</p>
+            </div>
+            <div class="card">
+              <h3>Approved Templates</h3>
+              <p id="approvedTemplates">0</p>
+            </div>
+            <div class="card">
+              <h3>Pending Templates</h3>
+              <p id="pendingTemplates">0</p>
+            </div>
+            <div class="card">
+              <h3>Rejected Templates</h3>
+              <p id="rejectedTemplates">0</p>
+            </div>
+          </div> -->
         </div>
 
         <!-- Add New Template Section -->
@@ -205,18 +331,50 @@
           <h2>Sales Track</h2>
           <p id="totalRevenue">Total Revenue: $0.00</p>
           <ul id="salesList"></ul>
+
+          <canvas id="salesChart" width="400" height="200"></canvas>
         </div>
 
         <!-- Payment Information Section -->
+        <!-- Payment Information Section -->
         <div id="payment-section" class="section">
-          <h2>Payment Info</h2>
+          <h2>Update Payment Information</h2>
           <form id="paymentForm">
             <label for="payment_method">Payment Method:</label><br />
             <select id="payment_method" name="payment_method" required>
+              <option value="">Select Payment Method</option>
               <option value="paypal">PayPal</option>
               <option value="venmo">Venmo</option>
               <option value="cashapp">Cash App</option></select
             ><br /><br />
+
+            <div id="paypal-info" class="conditional-field">
+              <label for="paypal_email">PayPal Email:</label><br />
+              <input
+                type="email"
+                id="paypal_email"
+                name="paypal_email"
+              /><br /><br />
+            </div>
+
+            <div id="venmo-info" class="conditional-field">
+              <label for="venmo_username">Venmo Username:</label><br />
+              <input
+                type="text"
+                id="venmo_username"
+                name="venmo_username"
+              /><br /><br />
+            </div>
+
+            <div id="cashapp-info" class="conditional-field">
+              <label for="cashapp_username">CashApp Username ($Cashtag):</label
+              ><br />
+              <input
+                type="text"
+                id="cashapp_username"
+                name="cashapp_username"
+              /><br /><br />
+            </div>
 
             <button type="submit">Update Payment Info</button>
           </form>
@@ -271,6 +429,8 @@
         "
       ></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels@2.0.0"></script>
 
     <!-- <script>
       document.addEventListener("DOMContentLoaded", function () {
@@ -751,6 +911,47 @@
         const sections = document.querySelectorAll(".section");
         const token = localStorage.getItem("token");
 
+        async function loadNotifications() {
+          const token = localStorage.getItem("token");
+          try {
+            const response = await fetch(
+              "http://localhost:3000/notifications",
+              {
+                method: "GET",
+                headers: { Authorization: `Bearer ${token}` },
+              }
+            );
+
+            if (response.ok) {
+              const notifications = await response.json();
+              const notificationList =
+                document.getElementById("notificationList");
+              notificationList.innerHTML = notifications
+                .map(
+                  (n) =>
+                    `<li>${n.message} - <small>${new Date(
+                      n.createdAt
+                    ).toLocaleString()}</small></li>`
+                )
+                .join("");
+
+              // Show notification badge if there are unread notifications
+              document.getElementById("notificationBadge").style.display =
+                notifications.some((n) => !n.isRead) ? "inline-block" : "none";
+            }
+          } catch (error) {
+            console.error("Error fetching notifications:", error);
+          }
+        }
+
+        function toggleNotifications() {
+          const dropdown = document.getElementById("notificationDropdown");
+          dropdown.style.display =
+            dropdown.style.display === "none" ? "block" : "none";
+        }
+
+        loadNotifications();
+
         // Sidebar navigation
         sidebarItems.forEach((item) => {
           item.addEventListener("click", function () {
@@ -764,6 +965,8 @@
 
         // Initial data loading
         displayDesignerName();
+        // loadDashboardStats();
+
         loadTemplates();
 
         // Fetch and display the designer's name
@@ -789,6 +992,72 @@
           }
         }
 
+        // Function to fetch and display dashboard stats
+        // async function loadDashboardStats() {
+        //   try {
+        //     const response = await fetch(
+        //       "http://localhost:3000/designer/stats",
+        //       {
+        //         method: "GET",
+        //         headers: {
+        //           "Content-Type": "application/json",
+        //           Authorization: `Bearer ${token}`,
+        //         },
+        //       }
+        //     );
+
+        //     if (!response.ok) throw new Error("Failed to fetch stats");
+        //     const stats = await response.json();
+        //     console.log(stats);
+
+        //     // Update the card values with fetched data
+        //     document.getElementById(
+        //       "totalSales"
+        //     ).textContent = `$${stats.totalSales.toFixed(2)}`;
+        //     document.getElementById("approvedTemplates").textContent =
+        //       stats.approvedTemplates;
+        //     document.getElementById("pendingTemplates").textContent =
+        //       stats.pendingTemplates;
+        //     document.getElementById("rejectedTemplates").textContent =
+        //       stats.rejectedTemplates;
+        //   } catch (error) {
+        //     console.error("Error fetching dashboard stats:", error);
+        //   }
+        // }
+        // Fetch and display designer stats
+        async function loadDesignerStats() {
+          try {
+            const response = await fetch(
+              "http://localhost:3000/designer/stats",
+              {
+                method: "GET",
+                headers: {
+                  "Content-Type": "application/json",
+                  Authorization: `Bearer ${token}`,
+                },
+              }
+            );
+
+            if (!response.ok) throw new Error("Failed to fetch stats");
+            const stats = await response.json();
+
+            // Display stats in the welcome section
+            document.getElementById("totalSales").textContent =
+              stats.totalSales;
+            document.getElementById("totalApproved").textContent =
+              stats.totalApproved;
+            document.getElementById("totalPending").textContent =
+              stats.totalPending;
+            document.getElementById(
+              "totalEarnings"
+            ).textContent = `$${stats.totalEarnings}`;
+          } catch (error) {
+            console.error("Error fetching designer stats:", error);
+          }
+        }
+
+        // Call the function to load stats on page load
+        loadDesignerStats();
         // Handle form submission for uploading a new template
         document
           .getElementById("templateForm")
@@ -1014,9 +1283,219 @@
           });
         }
 
-        document
-          .querySelector('[data-section="sales-section"]')
-          .addEventListener("click", loadSalesData);
+        async function loadSalesChartData() {
+          const token = localStorage.getItem("token");
+
+          try {
+            const response = await fetch(
+              "http://localhost:3000/designer/sales-chart",
+              {
+                method: "GET",
+                headers: {
+                  "Content-Type": "application/json",
+                  Authorization: `Bearer ${token}`,
+                },
+              }
+            );
+
+            if (!response.ok) throw new Error("Failed to fetch sales data");
+            const salesData = await response.json();
+
+            // Prepare data for the chart
+            const labels = [
+              "January",
+              "February",
+              "March",
+              "April",
+              "May",
+              "June",
+              "July",
+              "August",
+              "September",
+              "October",
+              "November",
+              "December",
+            ];
+
+            // Initialize arrays with 0 for each month
+            const totalSales = Array(12).fill(0);
+            const totalEarnings = Array(12).fill(0);
+
+            // Fill in the data from the salesData response
+            salesData.forEach((item) => {
+              const monthIndex = item._id - 1; // MongoDB months are 1-based, JavaScript arrays are 0-based
+              totalSales[monthIndex] = item.totalSales;
+              totalEarnings[monthIndex] = item.totalEarnings;
+            });
+            // Debugging logs
+            console.log("Labels:", labels);
+            console.log("Total Earnings:", totalEarnings);
+            console.log("Total Sales:", totalSales);
+            // Render the chart
+            renderSalesChart(labels, totalSales, totalEarnings);
+          } catch (error) {
+            console.error("Error fetching sales chart data:", error);
+          }
+        }
+
+        // Function to render the combination chart using Chart.js
+        function renderSalesChart(labels, totalSales, totalEarnings) {
+          const ctx = document.getElementById("salesChart").getContext("2d");
+          // Calculate total earnings and sales
+          const overallTotalEarnings = totalEarnings.reduce(
+            (acc, val) => acc + val,
+            0
+          );
+          const overallTotalSales = totalSales.reduce(
+            (acc, val) => acc + val,
+            0
+          );
+
+          console.log(overallTotalEarnings, overallTotalSales);
+
+          // Check if a previous chart instance exists and destroy it safely
+          if (
+            window.salesChart &&
+            typeof window.salesChart.destroy === "function"
+          ) {
+            window.salesChart.destroy();
+          }
+
+          // Create a new chart instance
+          window.salesChart = new Chart(ctx, {
+            type: "bar",
+            data: {
+              labels: labels,
+              datasets: [
+                {
+                  label: `Total Earnings ($) `,
+                  data: totalEarnings,
+                  backgroundColor: "rgba(75, 192, 192, 0.6)",
+                  borderColor: "rgba(75, 192, 192, 1)",
+                  borderWidth: 1,
+                  yAxisID: "yEarnings",
+                },
+                {
+                  label: "Total Sales (Count)",
+                  data: totalSales,
+                  backgroundColor: "rgba(153, 102, 255, 0.6)",
+                  borderColor: "rgba(153, 102, 255, 1)",
+                  borderWidth: 1,
+                  yAxisID: "ySales",
+                },
+              ],
+            },
+            options: {
+              responsive: true,
+              plugins: {
+                legend: {
+                  display: true,
+                  position: "top",
+                },
+                tooltip: {
+                  callbacks: {
+                    label: function (context) {
+                      if (context.dataset.label === "Total Earnings ($)") {
+                        return `Earnings: $${context.raw.toFixed(2)}`;
+                      } else {
+                        return `Sales: ${context.raw}`;
+                      }
+                    },
+                  },
+                },
+                datalabels: {
+                  anchor: "end",
+                  align: "top",
+                  formatter: function (value) {
+                    return value > 0 ? value : "";
+                  },
+                },
+              },
+              scales: {
+                yEarnings: {
+                  beginAtZero: true,
+                  max: 1000, // Maximum for earnings
+                  position: "left",
+                  title: {
+                    display: true,
+                    text: "Earnings ($)",
+                  },
+                },
+                ySales: {
+                  beginAtZero: true,
+                  max: 100, // Maximum for sales count
+                  position: "right",
+                  title: {
+                    display: true,
+                    text: "Sales Count",
+                  },
+                },
+              },
+            },
+            plugins: [ChartDataLabels],
+          });
+        }
+
+        loadSalesChartData();
+
+        // const token = localStorage.getItem("token");
+
+        const paymentForm = document.getElementById("paymentForm");
+        const paymentMethodSelect = document.getElementById("payment_method");
+        const paypalInfo = document.getElementById("paypal-info");
+        const venmoInfo = document.getElementById("venmo-info");
+        const cashappInfo = document.getElementById("cashapp-info");
+
+        // Show/hide fields based on selected payment method
+        paymentMethodSelect.addEventListener("change", function () {
+          paypalInfo.style.display = "none";
+          venmoInfo.style.display = "none";
+          cashappInfo.style.display = "none";
+
+          if (this.value === "paypal") {
+            paypalInfo.style.display = "block";
+          } else if (this.value === "venmo") {
+            venmoInfo.style.display = "block";
+          } else if (this.value === "cashapp") {
+            cashappInfo.style.display = "block";
+          }
+        });
+
+        // Handle form submission
+        paymentForm.addEventListener("submit", async function (event) {
+          event.preventDefault();
+
+          const formData = {
+            payment_method: paymentMethodSelect.value,
+            paypal_email: document.getElementById("paypal_email").value,
+            venmo_username: document.getElementById("venmo_username").value,
+            cashapp_username: document.getElementById("cashapp_username").value,
+          };
+
+          try {
+            const response = await fetch(
+              "http://localhost:3000/designer/update-payment-info",
+              {
+                method: "PUT",
+                headers: {
+                  "Content-Type": "application/json",
+                  Authorization: `Bearer ${token}`,
+                },
+                body: JSON.stringify(formData),
+              }
+            );
+
+            const result = await response.json();
+            if (response.ok) {
+              alert(result.message);
+            } else {
+              alert(result.message || "Failed to update payment information.");
+            }
+          } catch (error) {
+            console.error("Error updating payment information:", error);
+            alert("Error updating payment information. Please try again.");
+          }
+        });
       });
     </script>
   </body>
